Name:           OptDir
Version:        0.0.1
Cabal-Version:  >= 1.8
License:        BSD3
Author:         Masahiro Sakai
Maintainer:     Masahiro Sakai <masahiro.sakai@gmail.com>
Category:       Algorithms
Synopsis:       The OptDir type for representing optimization directions.
Description:    The OptDir type for representing optimization directions.
Stability:      stable
Build-Type:	Simple

Source-Repository head
  type:     git
  location: git://github.com/msakai/haskell-optdir.git

Library
  Build-Depends:      base >=4 && <5, syb
  Hs-Source-Dirs:     src
  Exposed-Modules:    Data.OptDir
  GHC-Options:        -Wall
